[build-system]
requires = ["setuptools>=61.0", "wheel"]
build-backend = "setuptools.build_meta"

[project]
name = "test-iceberg-overwrite"
version = "0.1.0"
description = "Demo of Apache Iceberg partition overwrite scenario with Spark"
readme = "README.md"
requires-python = ">=3.10"
dependencies = [
    "pyspark>=3.5,<4.1",
    "boto3>=1.34",
    "fastavro>=1.12",
]

[tool.setuptools.packages.find]
include = ["scripts*"]
exclude = ["vendor*", "warehouse*", "build*", "spark-warehouse*", "test_iceberg_overwrite.egg-info*"]

[project.optional-dependencies]
test = [
    "pytest>=8.0",
]

[tool.pytest.ini_options]
minversion = "8.0"
addopts = "-ra"
testpaths = [
    "tests",
]
markers = [
    "integration: marks tests that require external services like Spark",
]
